feat(backend):  ai agent stream event